--- a/game Robot/gameRobot.css
+++ b/game Robot/gameRobot.css
@@ -59,7 +59,7 @@ body {
 
 .selected {
   border: solid;
-  border-color: green;
+  border-color: orange;
   border-radius: 5px;
   border-width: 2px;
 }
