when both the robot and computer make the same selection the border of the icon changes to turquoise and the result text changes to 'TIE'

--- a/game Robot/gameRobot.css
+++ b/game Robot/gameRobot.css
@@ -70,3 +70,12 @@ body {
   border-radius: 5px;
   border-width: 2px;
 }
+
+/*border colour when tied*/
+
+.selectionTie {
+  border: solid;
+  border-color: turquoise;
+  border-radius: 5px;
+  border-width: 2px;
+}
