add logic to implement a 'next round' button which appears when either the robot or player wins a point, this also removes the selection element to prevent the user selecting another option before the next round starts

--- a/game Robot/gameRobot.css
+++ b/game Robot/gameRobot.css
@@ -26,7 +26,7 @@ body {
 }
 
 #roundNumber {
-  display: none;
+ display: none;
 }
 
 .playerSection {
@@ -78,4 +78,17 @@ body {
   border-color: turquoise;
   border-radius: 5px;
   border-width: 2px;
+}
+
+/*next round button style*/
+
+.nextRoundButton {
+  margin-top: 20px;
+  border-style: none;
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: brown;
+  color: white;
+  cursor: pointer;
 }
